hphp/test/slow/tail-await-verify-fail.php.expectf
string(16) "Invoked userAuto"

Catchable fatal error: Value returned from async method A::baz() must be of type ?HH\dict, HH\Map given in %s on line 22
